{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 65,
  "lineage": "866e52b6-e998-c904-3ace-9709b1c8e565",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "i-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:033746436249:internet-gateway/igw-08190171dbe89d523",
            "id": "igw-08190171dbe89d523",
            "owner_id": "033746436249",
            "tags": {
              "Name": "ecs-igtw"
            },
            "tags_all": {
              "Name": "ecs-igtw"
            },
            "vpc_id": "vpc-04206b911d2fc710f"
          },
          "dependencies": [
            "aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:033746436249:loadbalancer/app/app-lb21/7fd99d2d26b50031",
            "arn_suffix": "app/app-lb21/7fd99d2d26b50031",
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-lb21-1282051667.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:033746436249:loadbalancer/app/app-lb21/7fd99d2d26b50031",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-lb21",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0501a1fb51bb99fb2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-025f038a064fb5daf"
              },
              {
                "subnet_id": "subnet-0a5ae661a2fd42c91"
              }
            ],
            "subnets": [
              "subnet-025f038a064fb5daf",
              "subnet-0a5ae661a2fd42c91"
            ],
            "vpc_id": "vpc-04206b911d2fc710f",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg2",
            "aws_subnet.pub-subnets",
            "aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:033746436249:listener/app/app-lb21/7fd99d2d26b50031/e933162f5a913f17",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:033746436249:targetgroup/tg-group313/2099b35f9c673365",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:033746436249:listener/app/app-lb21/7fd99d2d26b50031/e933162f5a913f17",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:033746436249:loadbalancer/app/app-lb21/7fd99d2d26b50031",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app-lb",
            "aws_lb_target_group.tg-group",
            "aws_security_group.sg2",
            "aws_subnet.pub-subnets",
            "aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:033746436249:targetgroup/tg-group313/2099b35f9c673365",
            "arn_suffix": "targetgroup/tg-group313/2099b35f9c673365",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:033746436249:targetgroup/tg-group313/2099b35f9c673365",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-group313",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04206b911d2fc710f"
          },
          "dependencies": [
            "aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pub-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08190171dbe89d523",
            "id": "r-rtb-0687dbbb59ba4119c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0687dbbb59ba4119c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.i-gateway",
            "aws_route_table.pub-table",
            "aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:033746436249:route-table/rtb-0687dbbb59ba4119c",
            "id": "rtb-0687dbbb59ba4119c",
            "owner_id": "033746436249",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08190171dbe89d523",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04206b911d2fc710f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "as-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f76b697fd7834fd",
            "route_table_id": "rtb-0687dbbb59ba4119c",
            "subnet_id": "subnet-025f038a064fb5daf"
          },
          "dependencies": [
            "aws_route_table.pub-table",
            "aws_subnet.pub-subnets",
            "aws_vpc.ecs-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091260fe4320112db",
            "route_table_id": "rtb-0687dbbb59ba4119c",
            "subnet_id": "subnet-0a5ae661a2fd42c91"
          },
          "dependencies": [
            "aws_route_table.pub-table",
            "aws_subnet.pub-subnets",
            "aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:033746436249:security-group/sg-075db9eb34c379967",
            "description": "Port 5000",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ip and ports outboun",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-075db9eb34c379967",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 8000",
                "from_port": 8000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "golang-server",
            "name_prefix": "",
            "owner_id": "033746436249",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04206b911d2fc710f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:033746436249:security-group/sg-0501a1fb51bb99fb2",
            "description": "Port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ip and ports outboun",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0501a1fb51bb99fb2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "golang-server-alb",
            "name_prefix": "",
            "owner_id": "033746436249",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04206b911d2fc710f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:033746436249:subnet/subnet-025f038a064fb5daf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025f038a064fb5daf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "033746436249",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnets"
            },
            "tags_all": {
              "Name": "pub-subnets"
            },
            "vpc_id": "vpc-04206b911d2fc710f"
          },
          "dependencies": [
            "aws_vpc.ecs-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:033746436249:subnet/subnet-0a5ae661a2fd42c91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5ae661a2fd42c91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "033746436249",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnets"
            },
            "tags_all": {
              "Name": "pub-subnets"
            },
            "vpc_id": "vpc-04206b911d2fc710f"
          },
          "dependencies": [
            "aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ecs-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:033746436249:vpc/vpc-04206b911d2fc710f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00a5a890145851531",
            "default_route_table_id": "rtb-055d87512ff04a8cb",
            "default_security_group_id": "sg-048807793120290a0",
            "dhcp_options_id": "dopt-08d93a8f78bcd403b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04206b911d2fc710f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-055d87512ff04a8cb",
            "owner_id": "033746436249",
            "tags": {
              "Name": "ecs-vpc"
            },
            "tags_all": {
              "Name": "ecs-vpc"
            }
          }
        }
      ]
    }
  ]
}